# wallpapers

./: .gitignore  CMakeLists.txt  README.md
src/: config.c  config.h  files.c  files.h  main.c  tasks.c  tasks.h  version.c  version.h
